[package]
name = "linux_airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
bluer = { version = "0.15", features = ["full"] }
wpactrl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
dirs = "5.0"
indicatif = "0.17"
qrcode = "0.12"
rand = "0.8"
ring = "0.16"
hex = "0.4"
aes-gcm = "0.10"
walkdir = "2.3"
futures = "0.3"
tempfile = "3.11.0"